cabal-version:      3.0
name:               haskell-scheme
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nishant Chhillar
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell-scheme
    import:           warnings
    main-is:          Main.hs
    build-depends:    
            base ^>=4.18.3.0,
            parsec
    hs-source-dirs:   src
    default-language: Haskell2010
